# ubongo.os

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OFFLINE_SETUP_GUIDE.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  RUN.sh  index.html  package.json  pyproject.toml  requirements.txt  test_basic.py  test_gateway.py  test_offline.py  test_workspace.py  ubongo.spec  vercel.json
.github/workflows/: ci.yml  release.yml
api/: request-invite.ts
assets/: index-GFtxrrM_.js  index-RqQA9f0y.css
assistant_cli/: __init__.py  __main__.py  cli.py  config.py  main.py  models.py  setup_wizard.py
assistant_cli/core/: __init__.py  a2ui.py  agent_loop.py  canvas.py  channels.py  context_manager.py  conversation.py  conversation_engine.py  enhanced_parser.py  executor.py  intent_parser.py  knowledge_base.py  llm_client.py  quick_answer.py  reflection.py  sandbox.py  scheduler.py  semantic_memory.py  sessions.py  smart_matcher.py  task_planner.py  workspace.py
assistant_cli/providers/: __init__.py  anthropic_provider.py  base.py  groq_provider.py  ollama_provider.py  router.py  tool_definitions.py
assistant_cli/tools/: __init__.py  app_control.py  applescript_automation.py  browser_automation.py  file_operations.py  platform_bridge.py  screen_control.py  system_info.py  windows_automation.py
assistant_cli/ui/: intro_animation.py
assistant_cli/utils/: __init__.py  logger.py
desktop/: index.html  package-lock.json  package.json  tailwind.config.ts
desktop/server/: gateway.py  server.py  ubongo-server.spec
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-vanilla/: index.html  main.js  style.css
desktop/src/components/: ActionBar.tsx  Onboarding.tsx  OrbitalView.tsx  ResponseRenderer.tsx  ThinkingIndicator.tsx
desktop/src/lib/: tauri.ts  types.ts  useUpdateCheck.ts
docs/: ARCHITECTURE.md  IMPROVEMENTS_ROADMAP.md  OFFLINE_FIRST_ARCHITECTURE.md  OPENCLAW_ANALYSIS.md
proxy/: Dockerfile  README.md  fly.toml  main.py  requirements.txt
scripts/: build_binary.py
site/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
site/src/: App.tsx  index.css
site/src/hooks/: use-mouse-position-ref.ts
surfari/: .env.example  next.config.ts  package-lock.json  package.json
surfari/app/: globals.css  layout.tsx  page.tsx
surfari/app/surfari/: layout.tsx  page.tsx
surfari/components/chat/: CityChat.tsx  ZoneChat.tsx
surfari/components/game/: BodaRush.tsx  FrequencyDuel.tsx  GameArena.tsx  Onboarding.tsx  PlantFlow.tsx  SignalRush.tsx  WaveChallenge.tsx  ZoneFlood.tsx  ZonePanel.tsx  ZonePopup.tsx  juice.tsx
surfari/components/layout/: DesktopSidebar.tsx  HUD.tsx
surfari/components/map/: CityMap.tsx  CrewLayer.ts  RunnerLayer.ts  SurfRun.tsx  runnerModel.ts
surfari/components/screens/: ExploreScreen.tsx  ProfileScreen.tsx  (+2 more)
surfari/hooks/: useIsDesktop.ts
surfari/lib/: storage.ts  utils.ts
surfari/public/: manifest.json
surfari/store/: game.ts
surfari/styles/: tokens.css
surfari/types/: index.ts
(+29 files in other folders)
