[package]
name    = "ubongo"
version = "0.5.11"
edition = "2021"

[lib]
name       = "ubongo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                        = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell           = "2"
serde                        = { version = "1", features = ["derive"] }
serde_json                   = "1"
reqwest                      = { version = "0.12", features = ["json", "blocking"] }
tokio                        = { version = "1", features = ["full"] }
open                         = "5"

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
strip     = true
